--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <title>Vite + React</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
